syntax = "proto3";

enum HashType {
  HASH_TYPE_UNSPECIFIED = 0;
  HASH_TYPE_SHA256      = 1;
  HASH_TYPE_SHA512      = 2;
}

message Hash {
  HashType hashtype = 1;
  bytes data = 2;
}
